--- a/templates/blog-page.html
+++ b/templates/blog-page.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 <div class="content">
-  <h3><a href="javascript:history.back()">&larr; Back</a></h3>
+  <span class="icon-text">
+    <a href="javascript:history.back()">
+      <span class="icon">
+        <i class="fas fa-arrow-left"></i>
+      </span>
+      <span>Back</span>
+    </a>
+  </span>
   <h1 class="title">{{ page.title }}</h1>
-  <p>{{ page.date }}</p>
+  <strong>{{ page.date }}</strong>
   {{ page.content | safe }}
 </div>
 
