--- a/templates/index.html
+++ b/templates/index.html
@@ -23,13 +23,11 @@
     <div class="box">
       <article class="post">
         <a href="/blog/rust-dev-env-astrovim/">
-          <h4 class="has-text-weight-bold">Rust Development Environment with AstroNvim and rust-analyzer</h4>
-          <p>2022-12-21</p>
+          <h4 class="has-text-weight-bold">Replatforming from Gatsby to Zola!</h4>
+          <p>2024-04-01</p>
           </Link>
           <div class="media">
-            <p>As a budding Rust programmer, I recently found myself wanting to set up a local development environment
-              that would allow me to easily write and test code. After doing some research, I decided to give AstroNvim
-              a try.</p>
+            <p>So I've had my fair share of personal websites and blogs. I have built them on stacks ranging from the most basic HTML and CSS, to hosted frameworks like Wordpress and Laravel, to the more modern single page applications built in Vue and React...</p>
           </div>
         </a>
       </article>
