--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,12 @@
     <h3 class="has-text-weight-bold">Recent Posts</h3>
     <div class="box">
       <article class="post">
-        <a href="/blog/03-replatforming-personal-website/">
-          <h4 class="has-text-weight-bold">Replatforming from Gatsby to Zola!</h4>
-          <p>2024-04-01</p>
+        <a href="/blog/02-an-ultralearning-approach-to-the-technical-interview/">
+          <h4 class="has-text-weight-bold">An Ultralearning Approach to the Technical Interview</h4>
+          <p>2024-06-21</p>
           </Link>
           <div class="media">
-            <p>So I've had my fair share of personal websites and blogs. I have built them on stacks ranging from the most basic HTML and CSS, to hosted frameworks like Wordpress and Laravel, to the more modern single page applications built in Vue and React...</p>
+            <p>In 2023 I interviewed with Amazon and Google. Both were eye opening experiences and exposed me to the rigor and extreme caution that big tech companies take with their hiring process. Their philosophy, as I’ve come to understand, is that passing on a few good candidates is better than hiring one bad egg. This poses an especially big challenge for us humble interviewees because we need to be extremely prepared, knowledgeable and level-headed come interview time...</p>
           </div>
         </a>
       </article>
